--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -4,6 +4,7 @@ admin.page.index:
         _controller: 'page.controller.admin:indexAction'
     options:
         require_admin_permission: page.index
+
 admin.page.grid:
     path: /admin/cms/page/grid
     condition: "request.isXmlHttpRequest()"
@@ -12,12 +13,14 @@ admin.page.grid:
     options:
         expose: true
         require_admin_permission: page.index
+
 admin.page.add:
     path: /admin/cms/page/add
     defaults:
         _controller: 'page.controller.admin:addAction'
     options:
         require_admin_permission: page.add
+
 admin.page.edit:
     path: '/admin/cms/page/edit/{id}'
     defaults:
@@ -25,10 +28,19 @@ admin.page.edit:
     options:
         expose: true
         require_admin_permission: page.edit
+
 admin.page.delete:
     path: '/admin/cms/page/delete/{id}'
     defaults:
         _controller: 'page.controller.admin:deleteAction'
+    options:
+        expose: true
+        require_admin_permission: page.delete
+
+admin.page.delete_group:
+    path: '/admin/cms/page/delete_group'
+    defaults:
+        _controller: 'page.controller.admin:deleteGroupAction'
     options:
         expose: true
         require_admin_permission: page.delete
