--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,7 +1,14 @@
+# WellCommerce Open-Source E-Commerce Platform
+#
+# This file is part of the WellCommerce package.
+# (c) Adam Piotrowski <adam@wellcommerce.org>
+#
+# For the full copyright and license information,
+# please view the LICENSE file that was distributed with this source code.
 
 services:
     page.layout_box.configurator:
-        class: WellCommerce\Bundle\LayoutBundle\Configurator\PageBoxConfigurator
+        class: WellCommerce\Bundle\PageBundle\Configurator\PageBoxConfigurator
         tags:
             - { name: layout_box.configurator }
         arguments: [Page, page.layout_box.controller, '@translator.helper']
